test/Fail/Issue610-4.err
Issue610-4.agda:28.11-30: error: [UnequalTerms]
ack (set _) !=< ⊥
when checking that the expression subst (λ x → x) q _ has type ⊥
